Source/JavaScriptCore/jit/JITMulGenerator.cpp
@@ -42,12 +42,6 @@ JITMathICInlineResult JITMulGenerator::generateInline(CCallHelpers& jit, MathICG
     if (m_arithProfile) {
         lhs = m_arithProfile->lhsObservedType();
         rhs = m_arithProfile->rhsObservedType();
-        if (lhs.isEmpty() || rhs.isEmpty()) {
-            // FIXME: ICs should be able to repatch without emitting an inline path:
-            // https://bugs.webkit.org/show_bug.cgi?id=160110
-            lhs = ObservedType().withInt32();
-            rhs = ObservedType().withInt32();
-        }
     }
 
     if (lhs.isOnlyNonNumber() && rhs.isOnlyNonNumber())
